typescript/checker/tests/conformance/expressions/assignmentOperator/compoundAssignmentLHSIsReference.ts.stderr
error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            55,
        ),
        hi: BytePos(
            57,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/expressions/assignmentOperator/compoundAssignmentLHSIsReference.ts:4:5
  |
4 | var x1: number;
  |     ^^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            183,
        ),
        hi: BytePos(
            185,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/assignmentOperator/compoundAssignmentLHSIsReference.ts:14:5
   |
14 | var x3: { a: number };
   |     ^^

